--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,9 +12,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="{{ site.title }}">
-  <meta name="twitter:description" content="{{ site.description }}">
+  {% include twitter_card.html %}
 
   <meta property="og:type" content="article">
   <meta property="og:title" content="{{ site.title }}">
