--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 @import url(uno.css);
-@import url(monokai.css);
+/* @import url(monokai.css); */
+@import url(base16.css);
 
 /* Modifications */
 
